--- a/src/styles/final/footer.css
+++ b/src/styles/final/footer.css
@@ -1,12 +1,9 @@
-* {
-  /* outline: 1px solid red; */
-}
 footer {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: column;
   background-color: rgb(13, 13, 17);
   color: whitesmoke;
   opacity: 1;
@@ -36,11 +33,11 @@ footer {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-          flex-direction: row;
+  flex-direction: row;
   padding: 5px;
   padding-bottom: 5px;
   -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 
   flex-wrap: wrap;
 }
@@ -61,9 +58,9 @@ footer {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: start;
-          justify-content: flex-start;
+  justify-content: flex-start;
 }
 .social_media__footer__icons {
   display: -webkit-box;
@@ -71,7 +68,7 @@ footer {
 
   -webkit-box-pack: enter;
 
-          justify-content: enter;
+  justify-content: enter;
 }
 .icons__footer {
   font-size: large;
